<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@xml/dialog_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/driver_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_id" />

                <EditText
                    android:id="@+id/edit_driver_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/lightGray"
                    android:hint=""
                    android:inputType="number"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/license_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_number" />

                <EditText
                    android:id="@+id/edit_license_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/lightGray"
                    android:hint=""
                    android:inputType="number"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/lightGray"
                    android:hint=""
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/lightGray"
                    android:hint=""
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/lightGray"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:hint=""
                    android:inputType="number"
                    android:digits="0123456789-"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/license_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_type" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="A"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </TextView>
                        <CheckBox
                            android:id="@+id/chk_a2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A2" />
                        <CheckBox
                            android:id="@+id/chk_a1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A1" />
                        <CheckBox
                            android:id="@+id/chk_a"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="B"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <CheckBox
                            android:id="@+id/chk_b"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="B" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="C"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <CheckBox
                            android:id="@+id/chk_c1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="C1" />
                        <CheckBox
                            android:id="@+id/chk_c"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="C" />
                        <CheckBox
                            android:id="@+id/chk_c_e"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="C+E" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="D"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <CheckBox
                            android:id="@+id/chk_d1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="D1" />
                        <CheckBox
                            android:id="@+id/chk_d"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="D" />
                        <CheckBox
                            android:id="@+id/chk_d3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="D3" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="1"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <CheckBox
                            android:id="@+id/chk_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc" />

                <EditText
                    android:id="@+id/edit_desc"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/lightGray"
                    android:hint=""
                    android:padding="4dp"
                    android:gravity="start"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="3dp"
                    android:background="@xml/round_button"
                    android:text="@string/save_driver"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@xml/round_button"
                    android:text="@string/cancel"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
